--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v.4l-10 6.25L2 6.4V6z"/>
             <path d="M2 8.2v9.8a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8.2l-9.44 5.9a2 2 0 0 1-2.12 0L2 8.2z"/>
           </svg>
-          <a href="mailto:info@ivslinelat.eu" style="color:#fff">info@ivslinelat.eu</a>
+          <a href="mailto:info@ivslinelatlat.eu" style="color:#fff">info@ivslinelatlat.eu</a>
         </span>
       </div>
       <div class="topbar__right">
@@ -628,7 +628,7 @@
             <li>Pašreizējās sistēmas: banka, rēķini, noliktava, e-komercija.</li>
           </ul>
           <hr style="border:none;border-top:1px solid #cfe0ee;margin:18px 0">
-          <p><strong>Ātrais kanāls:</strong> <a href="mailto:info@ivslinelat.eu">info@ivslinelat.eu</a></p>
+          <p><strong>Ātrais kanāls:</strong> <a href="mailto:info@ivslinelatlat.eu">info@ivslinelatlat.eu</a></p>
           <p class="muted">Parasti atbildam tajā pašā darba dienā līdz plkst. 17:00.</p>
         </aside>
       </div>
@@ -643,7 +643,7 @@
       <div>
         <strong>IVS LINE SIA</strong><br>
         10–29 Mazcenu aleja, Jaunmārupe, Mārupes pag., Mārupes nov., LV-2166, Latvija<br>
-        E-pasts: <a href="mailto:info@ivslinelat.eu" style="color:#bfe1ff">info@ivslinelat.eu</a>
+        E-pasts: <a href="mailto:info@ivslinelatlat.eu" style="color:#bfe1ff">info@ivslinelatlat.eu</a>
       </div>
       <div class="copyright">
         © <span id="year"></span> IVS LINE SIA. Visi tiesību paturēti.
@@ -682,3 +682,4 @@
   -->
 </body>
 </html>
+
